--- a/scss/_l-interactive-map.scss
+++ b/scss/_l-interactive-map.scss
@@ -69,6 +69,11 @@
       height: 402px;
     }
   }
+  
+  & .container {
+    position: relative;
+    z-index: 2;
+  }
 
   &__title {
     margin: 10px 0 60px;
